Modify menu so that Azax options all depend on a conditional flag. This still needs the flag to be set though. Make 'Edit item' and 'Add item' contain non-break spaces so they don't word-wrap. Gave the 'add item/edit item' li elements relative positioning. This means that if you make the backgrounds non-transparent they now have the correct z-order against the underlying elements (otherwise you get the non-transparent background but underlying text still shows through).

--- a/plone/editstyles.css
+++ b/plone/editstyles.css
@@ -118,7 +118,9 @@ img.slot-element-grip {
 .slot_target_highlighted .menuPosition,
 .slot_target .menuPosition,
 .slot_element_highlighted .menuPosition,
-.slot_element .menuPosition {
+.slot_element .menuPosition,
+.slot_element .contentActions li,
+.slot_element_highlighted .contentActions li {
     position: relative;
 }
 
